# llvm-project

./: CMakeLists.txt  conanfile.txt
clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidyForceLinker.h
clang-tools-extra/clang-tidy/quantum/: CMakeLists.txt  InterfaceConformityCheck.cpp  InterfaceConformityCheck.h  NamingAcronymsCheck.cpp  NamingAcronymsCheck.h  QuantumTidyModule.cpp
clang-tools-extra/clang-tidy/readability/: IdentifierNamingCheck.cpp  IdentifierNamingCheck.h
clang-tools-extra/docs/: ReleaseNotes.rst
clang-tools-extra/docs/clang-tidy/checks/: list.rst  quantum-interface-conformity.rst  quantum-naming-acronyms.rst  readability-identifier-naming.rst
clang-tools-extra/test/clang-tidy/checkers/: quantum-interface-conformity.cpp  quantum-naming-acronyms.cpp
clang/tools/: CMakeLists.txt
clang/tools/dto-serializer-generator/: .clang-format  CMakeLists.txt  CliOptionsManager.cpp  CliOptionsManager.hpp  DtoSerializerGeneratorAstConsumer.cpp  DtoSerializerGeneratorAstConsumer.hpp  DtoSerializerGeneratorFrontendAction.cpp  DtoSerializerGeneratorFrontendAction.hpp  DtoSerializerGeneratorVisitor.cpp  DtoSerializerGeneratorVisitor.hpp  SerializerCodeGenerator.cpp  SerializerCodeGenerator.hpp  Utils.cpp  Utils.hpp  main.cpp
